--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,14 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.7.3</version>
 		</dependency>
-														
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-core</artifactId>
+		    <version>7.0.47</version>
+		    <scope>test</scope>
+		</dependency>
+																
   </dependencies>
   <build>
     <finalName>yunsoparser</finalName>
